# backend-heart-monitor

./: .gitignore  docker-compose.yml
fastAPI-Embarcados/: Dockerfile  heart-monitor.html  pyproject.toml
fastAPI-Embarcados/app/: .env.dist  main.py  models.py  repositories.py  services.py
